2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: allocate structs using GSlice.

	* app/base/tile-swap.[ch]
	* app/xcf/xcf-load.c: removed dead code that used to deal with
	swapping from XCF files. Simplified swap file code quite a bit.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/core/gimparea.[ch]
	* app/core/gimpprojection.c
	* app/display/gimpdisplay.c: use GSlice to allocate GimpArea and
	sanitize the API.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.[ch]
	* app/base/tile-manager-private.h: removed unused code.

	* app/base/pixel-surround.c
	* app/base/pixel-region.c: allocate structs using GSlice.

	* app/base/tile.c: allocate TileLink and TileRowHint using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpclipboard.c
	* app/widgets/gimpcontainerview.c
	* app/widgets/gimpdialogfactory.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpscanner.c
	* libgimpwidgets/gimpwidgets.c: allocate structs using GSlice.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpmagnifyoptions.[ch]: remove "threshold" from
	the options struct and added compat code in get_property().

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/config/gimprc-unknown.c
	* app/config/gimpxmlparser.c: allocate structs using GSlice.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/vectors/gimpvectors-import.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactionview.c: use GSlice to allocate struct.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollers.c
	* app/widgets/gimpdevices.c
	* app/widgets/gimpdevicestatus.c
	* app/widgets/gimpeditor.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmenufactory.c
	* app/widgets/gimpactionfactory.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>
